# AMA-Cryptography

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .semgrep.yml  AMA_CRYPTOGRAPHY_ETHICAL_PILLARS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AVA_GUARDIAN_ETHICAL_PILLARS.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONSTANT_TIME_VERIFICATION.md  CONTRIBUTING.md  CRYPTOGRAPHY.md  CRYPTO_PACKAGE.json  CSRC_ALIGN_REPORT.md  CSRC_STANDARDS.md  ENHANCED_FEATURES.md  IMPLEMENTATION_GUIDE.md  INVARIANTS.md  MERCURY_AGENT_MIGRATION.md  MONITORING.md  Makefile  NEXT_SESSION.md  NEXT_SESSION_ROADMAP.md  NOTICE  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_PREP.md  SECURITY_COMPARISON.md  SKILLS.md  THREAT_MODEL.md  ama_cryptography.pc.in  ama_cryptography_monitor.py  ama_cryptography_monitor_demo.py  ava_guardian_monitor.py  (+14 more)
.agents/: AGENTS.md
.github/: CODEOWNERS  FUNDING.yml  INVARIANTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.well-known/: security.txt
ama_cryptography/: __init__.py  __main__.py  _build_sign.py  _falcon_ntru.py  _finalizer_health.py  _integrity_digest.txt  _integrity_signature.py  _numeric.py  _self_test.py  adaptive_posture.py  crypto_api.py  double_helix_engine.py  equations.py  exceptions.py  hybrid_combiner.py  integrity.py  key_management.py  key_storage.py  legacy_compat.py  monitor.py  monitoring.py  pqc_backends.py  rfc3161_timestamp.py  secure_channel.py  secure_memory.py  session.py  sha3_binding.pyi
ava_guardian/: __init__.py  crypto_api.py  double_helix_engine.py  equations.py  exceptions.py  pqc_backends.py
benchmarks/: Makefile  README.md  arm-baseline.json  baseline.json  benchmark-results.json  benchmark_c_raw.c  benchmark_runner.py  check_baseline_justification.py  comparative_benchmark.py  comparative_benchmark_results.json  generate_charts.py  performance_comparison.py  performance_results.json  performance_suite.py  phase0_baseline.py  phase0_baseline_results.json  regression_report.md  regression_results.json  requirements-bench.txt  validation_report.md  validation_results.json  validation_suite.py
build-aarch64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ama_cryptography.pc  cmake_install.cmake
build-on/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ama_cryptography.pc  cmake_install.cmake
build-rollback/: CMakeCache.txt  CTestTestfile.cmake  Makefile  ama_cryptography.pc  cmake_install.cmake
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.c-api  docker-compose.yml
docs/: AVX512_KECCAK_ADR.md  AVX512_KECCAK_PLAN.md  BENCHMARK_HISTORY.md  COMPETITIVE_ANALYSIS.md  DESIGN_NOTES.md  Doxyfile  HONEST_SYSTEM_ASSESSMENT.md  METRICS_REPORT.md  conf.py  constant-time-testing.md  ed25519_assembly_benchmark.md  ed25519_field_investigation_report.md  index.rst  oss-fuzz-onboarding.md  performance_investigation_report.md
examples/c/: CMakeLists.txt  example_encrypt_decrypt.c  example_hash.c  example_kem.c  example_sign_verify.c  pqc_demo.c  simple_example.c
forensics/: 01-environment.md  02-pr106-body.md  02-pr318-body.md  02-prs-identified.md  03-shas.md  04-pr318-history.md  05-pr318-diff.md  05-pr318-files.txt  05-pr318-hunk-docs_BENCHMARK_HISTORY.md.diff  05-pr318-hunk-include_ama_cryptography.h.diff  05-pr318-hunk-pyproject.toml.diff  05-pr318-hunk-src_c_ama_dilithium.c.diff  05-pr318-hunk-src_c_ama_x25519.c.diff  05-pr318-name-status.txt  05-pr318.diff  05-pr318.stat  06-pr318-scope.md
fuzz/: CMakeLists.txt  fuzz_aes_gcm.c  fuzz_argon2.c  fuzz_chacha20poly1305.c  fuzz_consttime.c  fuzz_dilithium.c  fuzz_ed25519.c  fuzz_frost.c  fuzz_hkdf.c  fuzz_kyber.c  fuzz_rng.c  fuzz_rng.h  fuzz_secp256k1.c  fuzz_sha3.c  fuzz_sphincs.c  fuzz_x25519.c
fuzz/dictionaries/: fuzz_aes_gcm.dict  fuzz_argon2.dict  fuzz_chacha20poly1305.dict  fuzz_consttime.dict  fuzz_dilithium.dict  fuzz_ed25519.dict  fuzz_hkdf.dict  fuzz_kyber.dict  fuzz_secp256k1.dict  fuzz_sha3.dict  fuzz_sphincs.dict  fuzz_x25519.dict
fuzz/seed_corpus/fuzz_aes_gcm/: minimal_input  random_input
fuzz/seed_corpus/fuzz_argon2/: simple
fuzz/seed_corpus/fuzz_consttime/: diff_buffers
fuzz/seed_corpus/fuzz_dilithium/: seed_and_msg
fuzz/seed_corpus/fuzz_hkdf/: minimal  standard
fuzz/seed_corpus/fuzz_sphincs/: seed_and_msg
fuzz/seed_corpus/fuzz_x25519/: zero_pair
include/: ama_cpuid.h  ama_cryptography.h  ama_dispatch.h  ama_uint128.h  ava_guardian.h
nist_vectors/: .gitignore  AES-256-GCM-SP800-38D.json  SHA-256-FIPS180-4.json  fetch_vectors.py  results.json  run_vectors.py
oss-fuzz/: Dockerfile  build.sh  project.yaml
schemas/: crypto_package_v1.py
tests/: COVERAGE_BASELINE.md  conftest.py  test_adaptive_posture.py  test_adaptive_posture_halt.py  test_adaptive_posture_scenarios.py  test_adversarial_pqc_hardening.py  test_adversarial_security.py  test_aes_gcm_counter_persistence.py  test_aes_gcm_native.py  test_aes_gcm_vectors.py  test_ama_cryptography_monitor.py  test_ava_guardian_monitor.py  test_basic.py  test_benchmark_baseline_infra.py  test_build_sign.py  test_cli_entry.py  test_code_quality_additions.py  (+72 more)
tests/c/: CMakeLists.txt  bench_ed25519.c  test_aes_bitsliced.c  test_aes_gcm_backend_introspect.c  test_aes_gcm_neon_equiv.c  test_aes_gcm_scalar_kat.c  test_aes_gcm_vaes_equiv.c  test_argon2_g_avx2_equiv.c  test_argon2_g_neon_equiv.c  test_argon2id.c  test_benchmark.c  test_chacha20_x8_avx2_equiv.c  test_chacha20_x8_neon_equiv.c  test_chacha20poly1305.c  test_consttime.c  test_core.c  test_dilithium_ntt_bench.c  test_dilithium_ntt_equiv.c  test_dilithium_rej_equiv.c  test_dispatch_cache_file.c  test_dispatch_only_env.c  test_dudect.c  test_ed25519.c  test_ed25519_comb_equiv.c  test_ed25519_verify_equiv.c  test_field_bench.c  test_frost.c  test_hkdf.c  test_kat.c  test_keccak_equiv.c  test_kyber_cbd2_equiv.c  test_kyber_cpa.c  test_kyber_debug.c  test_kyber_ntt_equiv.c  test_kyber_poly_equiv.c  test_secp256k1.c  test_sha256_neon_kat.c  test_sha3.c  test_sha3_512_stream.c  test_sha3_avx512_kat.c  (+10 more)
tests/c/dudect/: README.md  dudect.h
(+185 files in other folders)
